Mega CTA - fix responsive width on mobiles

--- a/_sass/components/card.scss
+++ b/_sass/components/card.scss
@@ -33,8 +33,8 @@ $card-ns: '';
   z-index: 0;
 
   .#{$card-ns}c-card__image {
-    min-width: 100%;
-    min-height: 100%;
+    /* min-width: 100%;
+    min-height: 100%; */
     position: absolute;
     top: -100%;
     right: -100%;
